tests/baselines/reference/objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts2.errors.txt
==== tests/cases/compiler/objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts2.ts (3 errors) ====
    // object types are identical structurally
    
    
    interface I<X, Y, Z, A> {
        (x: X): X;
    }
    
    interface I2 {
        <Y, Z, A, B>(x: Y): Y;
    }
    
    var a: { <Z, A, B, C, D>(x: Z): Z }
    
    function foo1(x: I<string, boolean, number, string>);
    function foo1(x: I<string, boolean, number, string>); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts2.ts(15,1): error TS2144: Duplicate overload signature for 'foo1'.
    function foo1(x: any) { }
    
    function foo2(x: I2);
    function foo2(x: I2); // error
    ~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts2.ts(19,1): error TS2144: Duplicate overload signature for 'foo2'.
    function foo2(x: any) { }
    
    function foo3(x: typeof a);
    function foo3(x: typeof a); // error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! objectTypesIdentityWithGenericCallSignaturesDifferingTypeParameterCounts2.ts(23,1): error TS2144: Duplicate overload signature for 'foo3'.
    function foo3(x: any) { }
    
    function foo13(x: I<boolean, string, number, Date>);
    function foo13(x: typeof a); // ok
    function foo13(x: any) { }
    
    function foo14(x: I<boolean, string, number, Date>);
    function foo14(x: I2); // error
    function foo14(x: any) { }
    
    function foo14b(x: typeof a);
    function foo14b(x: I2); // ok
    function foo14b(x: any) { }
    
    function foo15(x: I<boolean, string, number, Date>);
    function foo15(x: I2); // ok
    function foo15(x: any) { }